<?xml version="1.0"?>
<package>
  <name>csapex_jannlab</name>
  <version>0.0.1</version>
  <description>
    The jannlab package contains plugins for the csapex which can be used
    to dump out data in JANN format and to communicate with a JANNLab Framework
    server.
  </description>
  
  <author>Richard Hanten</author>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex_core_plugins</build_depend>
  <build_depend>csapex_ml</build_depend>
  <build_depend>cslibs_jcppsocket</build_depend>
  <build_depend>vision_plugins</build_depend>

  <run_depend>csapex_core_plugins</run_depend>
  <run_depend>csapex_ml</run_depend>
  <run_depend>cslibs_jcppsocket</run_depend>
  <run_depend>vision_plugins</run_depend>
  <run_depend>csapex</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
